--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
-  overflow: hidden;
-
-  /* background-color: #7232d3; */
-  background-image: linear-gradient(90deg, #ff7801, #d78d2c);
+  background-image: linear-gradient(to bottom right, #494949, #a6a6a6);
 }
 
 .search {
@@ -23,38 +17,34 @@ body {
 }
 
 .input {
-  height: 50px;
-  width: 50px;
-  font-size: 16px;
+  padding: 12px 32px;
+  font-size: 26px;
   border: 0;
-  padding: 16px;
-  transition: width 0.3s ease;
+  width: 74px;
+  border-radius: 50px;
+  background-color: #eee;
+
+  transition: width 0.3s linear;
 }
 
-.search .btn {
+.btn {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 50px;
-  background-color: #fafafa;
+  padding: 12px 24px;
+  font-size: 26px;
+  color: #555;
+  background-color: #ccc;
   border: 0;
-  font-size: 16px;
-  padding: 16px;
-
   cursor: pointer;
-  transition: transform 0.3s ease;
-}
+  border-radius: 50px;
 
-.search.active .input {
-  width: 400px;
-}
-
-.search.active .btn {
-  transform: translateX(350px);
+  transform: translateX(-74px);
 }
 
 .input:focus,
 .btn:focus {
   outline: none;
+}
+
+.search.show-serach-bar .input {
+  width: 450px;
 }
